fixed align of body elements

--- a/style/login.css
+++ b/style/login.css
@@ -15,3 +15,16 @@
     box-sizing: border-box;
     user-select: none;
 }
+
+ /* Generic */
+ body{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 12px;
+    background-color: var(--neu-1);
+    color: var(--gray);
+}
